tests/rosetta/out/C/bitmap-flood-fill.error
cc: exit status 1
/tmp/bitmap-flood-fill.c: In function ‘ff’:
/tmp/bitmap-flood-fill.c:62:40: error: request for member ‘len’ in something not a structure or union
   62 |   if (px < 0 || py < 0 || py >= ff_grid.len || px >= ff_grid.data[0].len) {
      |                                        ^
/tmp/bitmap-flood-fill.c:62:61: error: request for member ‘data’ in something not a structure or union
   62 |   if (px < 0 || py < 0 || py >= ff_grid.len || px >= ff_grid.data[0].len) {
      |                                                             ^
/tmp/bitmap-flood-fill.c:63:5: warning: ‘return’ with no value, in function returning non-void
   63 |     return;
      |     ^~~~~~
/tmp/bitmap-flood-fill.c:61:5: note: declared here
   61 | int ff(int px, int py) {
      |     ^~
/tmp/bitmap-flood-fill.c:65:14: error: request for member ‘data’ in something not a structure or union
   65 |   if (ff_grid.data[py].data[px] != ff_target) {
      |              ^
/tmp/bitmap-flood-fill.c:66:5: warning: ‘return’ with no value, in function returning non-void
   66 |     return;
      |     ^~~~~~
/tmp/bitmap-flood-fill.c:61:5: note: declared here
   61 | int ff(int px, int py) {
      |     ^~
/tmp/bitmap-flood-fill.c:68:3: error: ‘grid’ undeclared (first use in this function)
   68 |   grid.data[py].data[px] = ff_repl;
      |   ^~~~
/tmp/bitmap-flood-fill.c:68:3: note: each undeclared identifier is reported only once for each function it appears in
/tmp/bitmap-flood-fill.c: In function ‘flood’:
/tmp/bitmap-flood-fill.c:76:18: error: ‘grid’ undeclared (first use in this function)
   76 |   char *target = grid.data[y].data[x];
      |                  ^~~~
/tmp/bitmap-flood-fill.c:78:5: warning: ‘return’ with no value, in function returning non-void
   78 |     return;
      |     ^~~~~~
/tmp/bitmap-flood-fill.c:75:5: note: declared here
   75 | int flood(int x, int y, char *repl) {
      |     ^~~~~
/tmp/bitmap-flood-fill.c: In function ‘_mochi_main’:
/tmp/bitmap-flood-fill.c:114:27: error: incompatible types when initializing type ‘int’ using type ‘list_string’
  114 |   list_int grid_data[] = {tmp1, tmp2, tmp3, tmp4, tmp5};
      |                           ^~~~
/tmp/bitmap-flood-fill.c:114:33: error: incompatible types when initializing type ‘int *’ using type ‘list_string’
  114 |   list_int grid_data[] = {tmp1, tmp2, tmp3, tmp4, tmp5};
      |                                 ^~~~
/tmp/bitmap-flood-fill.c:114:39: error: incompatible types when initializing type ‘int’ using type ‘list_string’
  114 |   list_int grid_data[] = {tmp1, tmp2, tmp3, tmp4, tmp5};
      |                                       ^~~~
/tmp/bitmap-flood-fill.c:114:45: error: incompatible types when initializing type ‘int *’ using type ‘list_string’
  114 |   list_int grid_data[] = {tmp1, tmp2, tmp3, tmp4, tmp5};
      |                                             ^~~~
/tmp/bitmap-flood-fill.c:114:51: error: incompatible types when initializing type ‘int’ using type ‘list_string’
  114 |   list_int grid_data[] = {tmp1, tmp2, tmp3, tmp4, tmp5};
      |                                                   ^~~~
/tmp/bitmap-flood-fill.c:118:23: error: invalid initializer
  118 |     list_string row = grid.data[tmp6];
      |                       ^~~~
